--- a/index.html
+++ b/index.html
@@ -34,65 +34,65 @@ data-styled.g9[id="Body__BodyWrapper-sc-v34kqr-0"]{content:"oVFRU,"}/*!sc*/
 .gUOgk{margin-top:32px;padding:40px 0;border-top:1px solid #e9ecef;text-align:center;font-size:11pt;font-weight:lighter;color:#404040;}/*!sc*/
 .gUOgk > a{color:#191919;}/*!sc*/
 data-styled.g10[id="Footer__FooterWrapper-sc-1qfqdid-0"]{content:"gUOgk,"}/*!sc*/
-.cYswnL{margin-bottom:24px;font-size:32px;font-weight:700;line-height:1.3;color:#191919;word-break:break-all;}/*!sc*/
-.cYswnL > a{-webkit-text-decoration:none;text-decoration:none;color:inherit;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
-.cYswnL > a:hover{color:#404040;}/*!sc*/
-data-styled.g12[id="Title__Wrapper-sc-1ttlsnf-0"]{content:"cYswnL,"}/*!sc*/
+.lbAWYW{margin-top:48px;margin-bottom:32px;border:none;border-bottom:1px solid #e9ecef;}/*!sc*/
+data-styled.g11[id="Divider-sc-1jz0jl-0"]{content:"lbAWYW,"}/*!sc*/
 .fKwLTl{margin-bottom:16px;word-break:break-all;}/*!sc*/
-data-styled.g13[id="TagList__TagListWrapper-sc-s1uz5f-0"]{content:"fKwLTl,"}/*!sc*/
+data-styled.g12[id="TagList__TagListWrapper-sc-s1uz5f-0"]{content:"fKwLTl,"}/*!sc*/
 .OSwVR{display:inline-block;padding:9.6px 11.2px;margin-right:8px;margin-bottom:8px;border-radius:50px;background-color:#f1f3f5;color:#404040;-webkit-text-decoration:none;text-decoration:none;font-size:14.4px;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
 .OSwVR:hover{background-color:#dee2e6;}/*!sc*/
-data-styled.g14[id="TagList__TagLink-sc-s1uz5f-1"]{content:"OSwVR,"}/*!sc*/
-.lbAWYW{margin-top:48px;margin-bottom:32px;border:none;border-bottom:1px solid #e9ecef;}/*!sc*/
-data-styled.g15[id="Divider-sc-1jz0jl-0"]{content:"lbAWYW,"}/*!sc*/
-@media (max-width:768px){.euTAqz{padding:0 10px;}}/*!sc*/
-data-styled.g16[id="PostList__PostListWrapper-sc-1oqnm6-0"]{content:"euTAqz,"}/*!sc*/
-.bZxncx{position:relative;top:0;-webkit-transition:all 0.5s;transition:all 0.5s;}/*!sc*/
-@media (max-width:768px){.bZxncx{padding:0 5px;}}/*!sc*/
-data-styled.g17[id="PostList__PostWrapper-sc-1oqnm6-1"]{content:"bZxncx,"}/*!sc*/
-.bKKBoo{margin-bottom:16px;font-size:14.4px;color:#868e96;}/*!sc*/
-data-styled.g18[id="PostList__Date-sc-1oqnm6-2"]{content:"bKKBoo,"}/*!sc*/
-.hlgCLY{margin-bottom:32px;line-height:1.7;font-size:15px;color:#404040;word-break:break-all;}/*!sc*/
-data-styled.g19[id="PostList__Excerpt-sc-1oqnm6-3"]{content:"hlgCLY,"}/*!sc*/
-.cUedeU{height:48px;}/*!sc*/
-data-styled.g20[id="VerticalSpace-sc-fbwjqc-0"]{content:"cUedeU,"}/*!sc*/
+data-styled.g13[id="TagList__TagLink-sc-s1uz5f-1"]{content:"OSwVR,"}/*!sc*/
 .cIxGdo{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}/*!sc*/
 @media (max-width:768px){.cIxGdo{padding:0 15px;}}/*!sc*/
-data-styled.g29[id="Bio__BioWrapper-sc-5v8ml6-0"]{content:"cIxGdo,"}/*!sc*/
+data-styled.g31[id="Bio__BioWrapper-sc-5v8ml6-0"]{content:"cIxGdo,"}/*!sc*/
 .dpAebu{-webkit-flex:0 0 auto;-ms-flex:0 0 auto;flex:0 0 auto;margin-right:16px;width:128px;height:128px;border-radius:999px;background-image:url(https://023-dev.github.io//profile.png);background-size:cover;background-position:center;}/*!sc*/
-data-styled.g30[id="Bio__Profile-sc-5v8ml6-1"]{content:"dpAebu,"}/*!sc*/
+data-styled.g32[id="Bio__Profile-sc-5v8ml6-1"]{content:"dpAebu,"}/*!sc*/
 .zdqtp{margin-bottom:4.8px;font-size:24px;font-weight:700;color:#191919;}/*!sc*/
-data-styled.g31[id="Bio__Author-sc-5v8ml6-2"]{content:"zdqtp,"}/*!sc*/
+data-styled.g33[id="Bio__Author-sc-5v8ml6-2"]{content:"zdqtp,"}/*!sc*/
 .hskwiv{margin-bottom:11.2px;line-height:1.5;font-size:16px;color:#404040;}/*!sc*/
-data-styled.g32[id="Bio__Description-sc-5v8ml6-3"]{content:"hskwiv,"}/*!sc*/
+data-styled.g34[id="Bio__Description-sc-5v8ml6-3"]{content:"hskwiv,"}/*!sc*/
 .cZRWgC a{margin-right:9.6px;}/*!sc*/
 .cZRWgC svg{width:25.6px;height:25.6px;cursor:pointer;}/*!sc*/
 .cZRWgC svg path{fill:#868e96;-webkit-transition:fill 0.3s;transition:fill 0.3s;}/*!sc*/
 .cZRWgC a:hover svg path{fill:#191919;}/*!sc*/
-data-styled.g33[id="Bio__LinksWrapper-sc-5v8ml6-4"]{content:"cZRWgC,"}/*!sc*/
+data-styled.g35[id="Bio__LinksWrapper-sc-5v8ml6-4"]{content:"cZRWgC,"}/*!sc*/
+.cYswnL{margin-bottom:24px;font-size:32px;font-weight:700;line-height:1.3;color:#191919;word-break:break-all;}/*!sc*/
+.cYswnL > a{-webkit-text-decoration:none;text-decoration:none;color:inherit;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
+.cYswnL > a:hover{color:#404040;}/*!sc*/
+data-styled.g45[id="Title__Wrapper-sc-1ttlsnf-0"]{content:"cYswnL,"}/*!sc*/
+@media (max-width:768px){.euTAqz{padding:0 10px;}}/*!sc*/
+data-styled.g46[id="PostList__PostListWrapper-sc-1oqnm6-0"]{content:"euTAqz,"}/*!sc*/
+.bZxncx{position:relative;top:0;-webkit-transition:all 0.5s;transition:all 0.5s;}/*!sc*/
+@media (max-width:768px){.bZxncx{padding:0 5px;}}/*!sc*/
+data-styled.g47[id="PostList__PostWrapper-sc-1oqnm6-1"]{content:"bZxncx,"}/*!sc*/
+.bKKBoo{margin-bottom:16px;font-size:14.4px;color:#868e96;}/*!sc*/
+data-styled.g48[id="PostList__Date-sc-1oqnm6-2"]{content:"bKKBoo,"}/*!sc*/
+.hlgCLY{margin-bottom:32px;line-height:1.7;font-size:15px;color:#404040;word-break:break-all;}/*!sc*/
+data-styled.g49[id="PostList__Excerpt-sc-1oqnm6-3"]{content:"hlgCLY,"}/*!sc*/
 .jCYmBW{position:relative;}/*!sc*/
-data-styled.g34[id="SideTagList__RelativeWrapper-sc-11pn9fc-0"]{content:"jCYmBW,"}/*!sc*/
+data-styled.g50[id="SideTagList__RelativeWrapper-sc-11pn9fc-0"]{content:"jCYmBW,"}/*!sc*/
 .fhiNKx{position:absolute;left:112%;top:0px;width:200px;height:100px;font-size:16px;}/*!sc*/
 @media (max-width:1300px){.fhiNKx{display:none;}}/*!sc*/
-data-styled.g35[id="SideTagList__Wrapper-sc-11pn9fc-1"]{content:"fhiNKx,"}/*!sc*/
+data-styled.g51[id="SideTagList__Wrapper-sc-11pn9fc-1"]{content:"fhiNKx,"}/*!sc*/
 .hJSGhN{margin-bottom:25px;font-weight:bold;color:#404040;}/*!sc*/
-data-styled.g36[id="SideTagList__Title-sc-11pn9fc-2"]{content:"hJSGhN,"}/*!sc*/
+data-styled.g52[id="SideTagList__Title-sc-11pn9fc-2"]{content:"hJSGhN,"}/*!sc*/
 .eplOOa{margin-bottom:16px;color:#868e96;cursor:pointer;-webkit-transition:color 0.3s;transition:color 0.3s;}/*!sc*/
 .eplOOa:hover{color:#191919;}/*!sc*/
 .eplOOa > a{color:inherit;-webkit-text-decoration:none;text-decoration:none;}/*!sc*/
-data-styled.g37[id="SideTagList__Tag-sc-11pn9fc-3"]{content:"eplOOa,"}/*!sc*/
+data-styled.g53[id="SideTagList__Tag-sc-11pn9fc-3"]{content:"eplOOa,"}/*!sc*/
+.cUedeU{height:48px;}/*!sc*/
+data-styled.g54[id="VerticalSpace-sc-fbwjqc-0"]{content:"cUedeU,"}/*!sc*/
 .czXDrk{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;gap:15px;border-bottom:1px solid #e9ecef;margin-top:35px;margin-bottom:48px;}/*!sc*/
 .czXDrk a{-webkit-text-decoration:none;text-decoration:none;}/*!sc*/
-data-styled.g38[id="Tab__TabWrapper-sc-1ebif1p-0"]{content:"czXDrk,"}/*!sc*/
+data-styled.g55[id="Tab__TabWrapper-sc-1ebif1p-0"]{content:"czXDrk,"}/*!sc*/
 .gSgVxb{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:0 10px;height:43px;background-color:transparent;border:none;border-bottom:2px solid;border-bottom-color:#191919;font-size:14px;color:#191919;font-weight:bold;-webkit-letter-spacing:1px;-moz-letter-spacing:1px;-ms-letter-spacing:1px;letter-spacing:1px;cursor:pointer;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
 .gSgVxb:hover{color:#191919;border-bottom-color:#191919;}/*!sc*/
 .gSgVxb svg{margin-right:10px;height:20px;}/*!sc*/
 .dtEfKd{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:0 10px;height:43px;background-color:transparent;border:none;border-bottom:2px solid;border-bottom-color:transparent;font-size:14px;color:#868e96;font-weight:normal;-webkit-letter-spacing:1px;-moz-letter-spacing:1px;-ms-letter-spacing:1px;letter-spacing:1px;cursor:pointer;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
 .dtEfKd:hover{color:#191919;border-bottom-color:#e9ecef;}/*!sc*/
 .dtEfKd svg{margin-right:10px;height:20px;}/*!sc*/
-data-styled.g39[id="Tab__TabButton-sc-1ebif1p-1"]{content:"gSgVxb,dtEfKd,"}/*!sc*/
+data-styled.g56[id="Tab__TabButton-sc-1ebif1p-1"]{content:"gSgVxb,dtEfKd,"}/*!sc*/
 .bXRJvD{display:inline-block;margin-left:7px;padding:3px 6px;border-radius:50px;background-color:#f1f3f5;color:#404040;font-weight:normal;font-size:13px;-webkit-letter-spacing:0.3px;-moz-letter-spacing:0.3px;-ms-letter-spacing:0.3px;letter-spacing:0.3px;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
-data-styled.g40[id="Tab__Badge-sc-1ebif1p-2"]{content:"bXRJvD,"}/*!sc*/
+data-styled.g57[id="Tab__Badge-sc-1ebif1p-2"]{content:"bXRJvD,"}/*!sc*/
 </style><title data-react-helmet="true">023.log</title><script data-react-helmet="true" async="" src="https://www.googletagmanager.com/gtag/js?id=G-LDJQ09Q3V9"></script><script data-react-helmet="true">window.dataLayer = window.dataLayer || []; function gtag()
         {dataLayer.push(arguments)}
         gtag('js', new Date()); gtag('config', 'G-LDJQ09Q3V9');</script><link rel="icon" href="/favicon-32x32.png?v=3e3693026211c4c2c6e188caa1aa527e" type="image/png"/><link rel="manifest" href="/manifest.webmanifest" crossorigin="anonymous"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png?v=3e3693026211c4c2c6e188caa1aa527e"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png?v=3e3693026211c4c2c6e188caa1aa527e"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png?v=3e3693026211c4c2c6e188caa1aa527e"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png?v=3e3693026211c4c2c6e188caa1aa527e"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png?v=3e3693026211c4c2c6e188caa1aa527e"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png?v=3e3693026211c4c2c6e188caa1aa527e"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png?v=3e3693026211c4c2c6e188caa1aa527e"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=3e3693026211c4c2c6e188caa1aa527e"/><style type="text/css">
@@ -150,7 +150,10 @@ data-styled.g40[id="Tab__Badge-sc-1ebif1p-2"]{content:"bXRJvD,"}/*!sc*/
 상대적으로 더 익숙할 것이다.
 브레인 스토밍은 “머릿속 아이디어를 스토밍으로 쏟아낸다.”라고 표현할 수 있다.
 그럼 이벤트 스토밍은 어떻게 표현할 수 있을까?
-“발생 가능한 이벤트를 스토밍으로 자유롭게 도출한다.” 라고…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=etc"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">etc</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/linux/">Linux 아는 척 해보기</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">November 10, 2025</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">리 눅스 리눅스는 리눅스 커널을 기반의 유닉스 계열의 오픈 소스 운영체제이다. 오픈소스이다보니 자신들의 목적에 맞게 자유롭게 커스텀마이징된 다양한 버전들이 있다. Ubuntu, Debian, CentOS, Fedora 등이 이에 속하고 이들을 리눅스 배포판이라고 부른다. 그렇기에 리눅스 배포판들은 각각의 장단점을 가진다. 리눅스를 잘 이해한하게 된다면 상황…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=운영체제"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">운영체제</div></a><a href="/tags/?q=리눅스"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">리눅스</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/growing-together/">함께 자라기</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">November 01, 2025</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">자라기 달인이 되기 위한 방법으로 1만시간의 법칙이 흔히 거론된다. 여기서, 1만 시간의 법칙이란 “특정 분야에서 1만 시간 이상 일을 하면 그 분야에 달인이 된다”라는 말이다. 그럼 우리가 매일하는 양치는 1만 시간이 넘을텐데 양치의 달인이라고 할 수 있는가? 아니다. 시간만 투자한다고 해서 그 분야의 전문가라고 할 수는 없을 것이다. 달인이 되기 위해…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=회고"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">회고</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/first/">FIRST 원칙</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">October 20, 2025</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">FIRST 원칙은 &quot;Robert C. Martin in his book &quot;Clean Code: A Handbook of Agile Software Craftsmanship&quot;에서 소개되었다.
+“발생 가능한 이벤트를 스토밍으로 자유롭게 도출한다.” 라고…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=etc"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">etc</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/linux/">Linux 아는 척 해보기</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">November 10, 2025</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">리 눅스 리눅스는 리눅스 커널을 기반의 유닉스 계열의 오픈 소스 운영체제이다. 오픈소스이다보니 자신들의 목적에 맞게 자유롭게 커스텀마이징된 다양한 버전들이 있다. Ubuntu, Debian, CentOS, Fedora 등이 이에 속하고 이들을 리눅스 배포판이라고 부른다. 그렇기에 리눅스 배포판들은 각각의 장단점을 가진다. 리눅스를 잘 이해한하게 된다면 상황…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=운영체제"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">운영체제</div></a><a href="/tags/?q=리눅스"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">리눅스</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/growing-together/">함께 자라기</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">November 01, 2025</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">자라기 달인이 되기 위한 방법으로 1만시간의 법칙이 흔히 거론된다.
+여기서, 1만 시간의 법칙이란 “특정 분야에서 1만 시간 이상 일을 하면 그 분야에 달인이 된다”라는 말이다.
+그럼 우리가 매일하는 양치는 1만 시간이 넘을텐데 양치의 달인이라고 할 수 있는가?
+아니다. 시간만 투자한다고 해서 그 분야의 전문가라고 할 수는 없을 것이다. 달인이 되기 위해…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=회고"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">회고</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/first/">FIRST 원칙</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">October 20, 2025</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">FIRST 원칙은 &quot;Robert C. Martin in his book &quot;Clean Code: A Handbook of Agile Software Craftsmanship&quot;에서 소개되었다.
 유명한 책이라 소지하고 있었고, 가끔 궁금한 부분을 펼쳐서 읽곤 했는데..
 이게 있었다는게 기억이 나지 않는 걸 보니 읽지 않았던 모양이다.
 그래서 겸사겸사 꺼내서 읽…</p><div class="TagList__TagListWrapper-sc-s1uz5f-0 fKwLTl"><a href="/tags/?q=테스트"><div class="TagList__TagLink-sc-s1uz5f-1 OSwVR">테스트</div></a></div></div><hr class="Divider-sc-1jz0jl-0 lbAWYW"/><div class="PostList__PostWrapper-sc-1oqnm6-1 bZxncx"><h1 class="Title__Wrapper-sc-1ttlsnf-0 cYswnL"> <a href="/database-migration-flyway/">Flyway를 도입해보자!</a> </h1><p class="PostList__Date-sc-1oqnm6-2 bKKBoo">October 15, 2025</p><p class="PostList__Excerpt-sc-1oqnm6-3 hlgCLY">기존에는 ddl-auto=create/update 옵션을 사용해 스키마를 관리하고 있었지만,
